--- a/app/src/App.css
+++ b/app/src/App.css
@@ -8,7 +8,7 @@ html,body {
   height: 100%;
   margin: 0px;
   padding: 0px;
-  background-color: #222;
+  background-color: #002240;
   color: white;
 }
 
@@ -25,7 +25,7 @@ html,body {
 }
 
 .App-header {
-  background-color: #222;
+  /* background-color: #222; */
   height: 150px;
   padding: 20px;
   color: white;
@@ -95,7 +95,7 @@ html,body {
 }
 
 .editor-pane {
-  height: 100%;
+  height: 100vh;
   overflow-x: auto;
   overflow-y: auto;
 }
@@ -120,7 +120,7 @@ html,body {
 
 .toolbar {
   height: var(--toolbarHeight);
-  background-color: #353535;
+  /* background-color: #353535; */
   border-bottom: 1px solid rgba(173, 161, 161, 0.5);
   background-clip: padding-box;
   text-align: center;
